Adding endpoint for retrieving movies infos by a list of IDs. Adding cache for this API as movies basic data does not change frequently.